    * little tag commit for version 0.9.2
	
2003-12-15 Damien <ddouxchamps@users.sf.net>
    * fixed significant bug regarding IIDC specs revision detection
      (in dc1394_get_sw_revision).
	
2003-12-17 Damien <ddouxchamps@users.sf.net>
    * temporary fix for bpp settings in dc1394_format7_basic_setup
	
2003-12-24 Damien <ddouxchamps@users.sf.net>
    * updated the IOCTLs for kernels 2.4.21+ and 2.6.0+. This breaks compatibility with
      previous kernel versions.

2004-01-04 Dan Dennedy <dan@dennedy.org>
    * simplify video1394 includes and correct Damien's ChangLog entry about kernel 2.4
      compatibility.
    * examples/dc1394_vloopback.c: minor bugfixes.
    * autogen.sh: add missing libtoolize.
	
2004-01-14 Damien <ddouxchamps@users.sf.net>
    * fixed a bug related to IIDC version in format7 functions. All registers specific 
      of v1.30 are now only probed if the version is 1.30.

2004-01-14 Dan Dennedy <dan@dennedy.org>
    * libdc1394/ieee1394-ioctl.h: removed unnecessary
    * examples/dc1394_vloopback: added support for palettes yuv422p and yuv420p,
      added support for scaling up to 1024x768, greater v4l application compatibility.

2004-01-15 Damien <ddouxchamps@users.sf.net>
    * little additional fix regarding F7 and version issues.
	
2004-01-17 Damien <ddouxchamps@users.sf.net>
    * f7 csr caching by T.Evers

2004-01-19 Dan Dennedy <dan@dennedy.org>
    * dc1394_control.h: added dc1394_free_camera_nodes
    * updated examples to call dc1394_free_camera_nodes
    * examples/dc1394_vloopback.c: workaround potential linux/videodev.h
      problems on some distros' kernel headers.

2004-01-20 Dan Dennedy <dan@dennedy.org>
    * dc1394_multiview.c: bugfix segfault
	
2004-01-21 Damien <ddouxchamps@users.sf.net>
    * print a warning when format7 BPP is zero.
	
2004-01-26 Damien <ddouxchamps@users.sf.net>
    * version is now properly memorized. This caused several problems with format_7
      cameras.
